--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,3 +35,21 @@ target_compile_definitions(mrsw_ptr PUBLIC MRSW_PTR)
 
 add_executable(atomic_add_trail atomic_add_trail.cpp)
 target_link_libraries(atomic_add_trail ${UTIL_LIB})
+
+add_executable(atomic_set_trail atomic_set_trail.cpp)
+target_link_libraries(atomic_set_trail ${UTIL_LIB})
+
+find_package(Boost REQUIRED)
+find_package(folly REQUIRED)
+find_package(Threads REQUIRED)
+find_package(gflags REQUIRED)
+
+set_and_check(FOLLY_INCLUDE_DIR /usr/local/include/folly)
+set_and_check(FOLLY_CMAKE_DIR /usr/local/lib/cmake/folly)
+if (NOT TARGET Folly::folly)
+    include("${FOLLY_CMAKE_DIR}/folly-targets.cmake")
+endif()
+
+add_executable(haz_ptr_impl haz_ptr_impl.cpp general_bench.cpp)
+target_link_libraries(haz_ptr_impl ${UTIL_LIB} ${Boost_LIBRARIES} ${FOLLY_LIBRARIES} unwind)
+target_compile_definitions(haz_ptr_impl PUBLIC HAZ_PTR)
