--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,9 +29,9 @@ target_link_libraries(boost_arc ${UTIL_LIB})
 target_compile_definitions(boost_arc PUBLIC BOOST_ARC)
 target_include_directories(boost_arc PUBLIC ${Boost_INCLUDE_DIR})
 
-add_executable(mrsw_ptr mrsw_ptr_impl.cpp general_bench.cpp)
-target_link_libraries(mrsw_ptr ${UTIL_LIB})
-target_compile_definitions(mrsw_ptr PUBLIC MRSW_PTR)
+#add_executable(mrsw_ptr mrsw_ptr_impl.cpp general_bench.cpp)
+#target_link_libraries(mrsw_ptr ${UTIL_LIB})
+#target_compile_definitions(mrsw_ptr PUBLIC MRSW_PTR)
 
 add_executable(atomic_add_trail atomic_add_trail.cpp)
 target_link_libraries(atomic_add_trail ${UTIL_LIB})
